--- a/CadastrodeUsuario/Pages/Index.cshtml
+++ b/CadastrodeUsuario/Pages/Index.cshtml
@@ -5,13 +5,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    Este Trabalho de Conclusão de Curso apresenta o desenvolvimento de um sistema de controle financeiro 
-    pessoal utilizando a tecnologia ASP.NET MVC. O sistema tem como objetivo auxiliar os usuários no
-    gerenciamento de suas finanças, permitindo o cadastro de receitas e despesas, a exibição do 
-    saldo disponível e a geração de relatórios detalhados por categoria. 
-    Além disso, o sistema conta com filtros para visualização de dados por período e categorias, além da exibição de gráficos
-    interativos para facilitar a análise financeira. Com uma interface intuitiva e responsiva, a aplicação busca proporcionar uma experiência 
-    prática e eficiente na organização das finanças pessoais.
-  
+    <h1 class="display-4"> Bem-vindo ao TCC! </h1>
+   <h5> Este trabalho apresenta o desenvolvimento de um sistema de controle de cadastro de usuários utilizando ASP.NET no Visual Studio 2022. O objetivo principal é fornecer uma solução eficiente e segura para o gerenciamento de usuários, permitindo funcionalidades como cadastro, edição, exclusão e autenticação.
+
+    O sistema utiliza banco de dados SQL Server para armazenar as informações dos usuários e Entity Framework para a comunicação com o banco de dados. Além disso, implementa camadas de segurança, como autenticação e autorização, garantindo que apenas usuários autorizados acessem determinadas áreas do sistema.
+
+    A interface foi desenvolvida utilizando Razor Pages ou MVC (Model-View-Controller), proporcionando uma experiência intuitiva e responsiva. Tecnologias como Identity Framework foram aplicadas para a gestão segura de senhas e permissões.
+
+    Este trabalho destaca a importância da segurança no armazenamento de dados pessoais e aborda conceitos da Lei Geral de Proteção de Dados (LGPD) para garantir conformidade legal.
+
+    Por meio deste projeto, busca-se demonstrar como o ASP.NET pode ser uma ferramenta robusta para desenvolver aplicações seguras e escaláveis no controle de usuários.</h5>
 </div>
