--- a/CadastrodeUsuario/Pages/Usuarios/Details.cshtml
+++ b/CadastrodeUsuario/Pages/Usuarios/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Usuario</h4>
@@ -32,6 +32,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Usuario.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Usuario.Id" class="btn btn-light">Editar</a> |
+    <a asp-page="./Index" class="btn btn-outline-dark">Voltar</a>
 </div>
