--- a/CadastrodeUsuario/Pages/Shared/_Layout.cshtml
+++ b/CadastrodeUsuario/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CadastrodeUsuario.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 </head>
 <body>
     <header>
@@ -18,20 +19,46 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+
+
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>   
+                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacidade</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacidade</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="Usuarios/Index">Usuários</a>
+                        </li>
+
+                        <!-- Espaço automático entre os menus e os ícones -->
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link" href="https://www.instagram.com/" target="_blank">
+                                <i class="fab fa-instagram fa-lg" style="color: white;"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/" target="_blank">
+                                <i class="fab fa-github fa-lg" style="color: white;"></i>
+                            </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Usuarios/Index">Usuarios</a>
+                            <a class="nav-link" href="https://web.whatsapp.com" target="_blank">
+                                <i class="fab fa-whatsapp fa-lg" style="color: white;"></i>
+                            </a>
                         </li>
-                             
+
+                    
+
+
+
                     
                     </ul>
+
 
                 </div>
             </div>
@@ -43,7 +70,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-light mutednavbar-dark bg-dark ">
         <div class="container">
             &copy; 2025 - CadastrodeUsuario - <a asp-area="" asp-page="/Privacidade">Privacidade</a>
         </div>
