--- a/CadastrodeUsuario/Pages/Usuarios/Delete.cshtml
+++ b/CadastrodeUsuario/Pages/Usuarios/Delete.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir este item?</h3>
 <div>
     <h4>Usuario</h4>
     <hr />
