--- a/CadastrodeUsuario/Pages/Usuarios/Edit.cshtml
+++ b/CadastrodeUsuario/Pages/Usuarios/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
 <h4>Usuario</h4>
 <hr />
@@ -29,15 +29,18 @@
                 <input asp-for="Usuario.Phone" class="form-control" />
                 <span asp-validation-for="Usuario.Phone" class="text-danger"></span>
             </div>
+           <br/> 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
+       
         </form>
+   <br/>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index" class="btn btn-secondary btn-sm">Voltar</a>
 </div>
 
 @section Scripts {
